<resources>
    <string name="app_name">Yarmolovich Alexander - AS-63</string>
    <string name="likeBtn">Лайк</string>
    <string name="dislikeBtn">Дизлайк</string>
    <string name="image">Изображение</string>
    <string name="downloadBtn">Скачать</string>
    <string name="showInWeb">Открыть в браузере</string>
    <string name="search_image">Поиск изображения</string>
    <string name="search">Поиск</string>
    <string name="author">Ярмолович Александр Сергеевич</string>
    <string name="authorBtn">Создатель</string>
</resources>